Fixed some bugs and added comments to the class of the functionality.
Former-commit-id: e4796adf80de99bd77687034d0db143519a84161