@@ -3,11 +3,8 @@ package de.uni_hamburg.corpora.validation;
 import de.uni_hamburg.corpora.CorpusData;
 import de.uni_hamburg.corpora.CorpusFunction;
 import de.uni_hamburg.corpora.Report;
-import de.uni_hamburg.corpora.ReportItem;
 import de.uni_hamburg.corpora.utilities.TypeConverter;
 import java.io.IOException;
-import java.time.Duration;
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Set;
@@ -16,9 +13,7 @@ import java.util.logging.Logger;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
-import org.exmaralda.folker.utilities.TimeStringFormatter;
 import org.exmaralda.partitureditor.jexmaralda.JexmaraldaException;
-import org.exmaralda.partitureditor.jexmaralda.Tier;
 import org.jdom.JDOMException;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
@@ -27,8 +22,10 @@ import org.xml.sax.SAXException;
 
 /**
  *
- * @author Ozzy
+ * The class that calculates annotated time for exb files. 
+ *
  */
+
 public class CalculateAnnotatedTime extends Checker implements CorpusFunction {
 
     String annotLoc = "";
@@ -53,45 +50,52 @@ public class CalculateAnnotatedTime extends Checker implements CorpusFunction {
         }
         return stats;   
     }
-
+    
+    /**
+     * The primary functionality of the class; it accepts the basic transcription files of the
+     * corpus one by one and computes the duration of each annotation in the exb.
+     */
     private Report exceptionalCheck(CorpusData cd)
             throws SAXException, IOException, ParserConfigurationException, JexmaraldaException {
         Report stats = new Report(); //create a new report
         DocumentBuilderFactory dbf = DocumentBuilderFactory.newInstance();
         DocumentBuilder db = dbf.newDocumentBuilder();
         Document doc = db.parse(TypeConverter.String2InputStream(cd.toSaveableString())); // get the file as a document
-        String transcriptName;
+        // get the name of the transcription
+        String transcriptName; 
         if (doc.getElementsByTagName("transcription-name").getLength() > 0) {   // check if transcript name exists for the exb file
             transcriptName = doc.getElementsByTagName("transcription-name").item(0).getTextContent(); // get transcript name
         } else {
             transcriptName = "No Name Transcript";
         }
+        // add the title as a note to the report
         stats.addNote("calculate-annotated-time", "Annotation Tiers of " + transcriptName);
         HashMap<String, HashMap<String, String>> eventMap = new HashMap<>();
-        //initialise the hash map only the first time when this function is called
+        //initialise the hash map only for the first time when an exb file is encountered
         if (tierMap == null) {
             tierMap = new HashMap<>();
         }
         NodeList tiers = doc.getElementsByTagName("tier"); // get all tiers of the transcript
         NodeList items = doc.getElementsByTagName("tli"); // get all timeline items of the transcript
-        HashMap<String, Float> timelineItems = getTimelineItems(items);
-        HashMap<String, String> tierH = new HashMap<>();
+        HashMap<String, Float> timelineItems = getTimelineItems(items); // container for the tl items
+        HashMap<String, String> tierH = new HashMap<>(); 
         for (int i = 0; i < tiers.getLength(); i++) { // loop for dealing with each tier
-            Element tier = (Element) tiers.item(i);
-            if (tier.getAttribute("type").equals("a")) {
-                HashMap<String, String> eventH = new HashMap<>();
-                String tierDisplay = tier.getAttribute("display-name");
-                float tierDuration = 0;
-                NodeList events = tier.getElementsByTagName("event");
-                for (int j = 0; j < events.getLength(); j++) {  // 
-                    float eventDuration = 0;
-                    Element event = (Element) events.item(j);
-                    String eventLabel = event.getTextContent();
-                    String eventStart = event.getAttribute("start");
-                    String eventEnd = event.getAttribute("end");
-                    tierDuration += timelineItems.get(eventEnd) - timelineItems.get(eventStart);
-                    eventDuration = timelineItems.get(eventEnd) - timelineItems.get(eventStart);
-                    float secondsLeft = eventDuration % 60;
+            Element tier = (Element) tiers.item(i);  // get one tier at a time
+            if (tier.getAttribute("type").equals("a")) {  // handle annotation tiers exclusively
+                HashMap<String, String> eventH = new HashMap<>(); // hashmap for dealing with events
+                String tierDisplay = tier.getAttribute("display-name"); // get tier name
+                float tierDuration = 0;  // time the tier duration
+                NodeList events = tier.getElementsByTagName("event"); // get all events for the tier
+                for (int j = 0; j < events.getLength(); j++) {  // handle each event 
+                    float eventDuration = 0; // time the event duration
+                    Element event = (Element) events.item(j); 
+                    String eventLabel = event.getTextContent(); // acquire the content of the event
+                    String eventStart = event.getAttribute("start"); // acquire the starting tl item for the event
+                    String eventEnd = event.getAttribute("end"); // acquire the ending tl item for the event
+                    eventDuration = timelineItems.get(eventEnd) - timelineItems.get(eventStart); // calculate the event duration
+                    tierDuration += timelineItems.get(eventEnd) - timelineItems.get(eventStart); // add it up to the total tier duration
+                    // sort the format out for putting it on the report
+                    float secondsLeft = eventDuration % 60; 
                     int minutes = (int) Math.floor(eventDuration / 60);
                     String MM = (String) (minutes < 10 ? "0" + minutes : minutes);
                     String SS = (String) (secondsLeft < 10 ? "0" + Float.toString(secondsLeft) : Float.toString(secondsLeft));
@@ -100,9 +104,11 @@ public class CalculateAnnotatedTime extends Checker implements CorpusFunction {
                     }
                     eventH.put(eventLabel, MM + ":" + SS);
                 }
+                // put the events for each tier in the hashmap so long as there is an event under that tier
                 if (!eventH.isEmpty()) {
                     eventMap.put(tierDisplay, eventH);
                 }
+                // formatting the duration of the annotation for the report
                 float secondsLeft = tierDuration % 60;
                 int minutes = (int) Math.floor(tierDuration / 60);
                 String MM = (String) (minutes < 10 ? "0" + minutes : minutes);
@@ -110,10 +116,11 @@ public class CalculateAnnotatedTime extends Checker implements CorpusFunction {
                 if (SS.length() > 5) {
                     SS = SS.substring(0, 5);
                 }
-                tierH.put(tierDisplay, MM + ":" + SS);
-                report.addNote("calculate-annotated-time", tierDisplay + "  " + MM + ":" + SS);
+                tierH.put(tierDisplay, MM + ":" + SS); // add total duration of each tier into the hash map
+                report.addNote("calculate-annotated-time", tierDisplay + "  " + MM + ":" + SS); // display it on the report
             }
         }
+        // show the annotation time for each label in every tier
         report.addNote("calculate-annotated-time", "Labels per Tier");
         Set perTier = eventMap.keySet();
         for(Object per: perTier){
@@ -129,13 +136,22 @@ public class CalculateAnnotatedTime extends Checker implements CorpusFunction {
         tierMap.put(transcriptName, tierH);  // finally add the annotations of the transcript
         return stats;
     }
-
+    
+    /**
+     * A method for obtaining the time line items with their IDs and time.
+     */
     public HashMap<String, Float> getTimelineItems(NodeList items) {
         HashMap<String, Float> h = new HashMap<>();
         for (int i = 0; i < items.getLength(); i++) { // loop for dealing with each timeline item
             Element item = (Element) items.item(i);
             String itemID = item.getAttribute("id");
-            Float time = new Float(item.getAttribute("time"));
+            Float time = null;
+            if(h.get("T"+Integer.toString(Integer.valueOf(itemID.substring(1))-1))!=null)
+                time = h.get("T"+Integer.toString(Integer.valueOf(itemID.substring(1))-1));
+            else
+                time = new Float(0.0);
+            if(!item.getAttribute("time").equals(""))
+                time = new Float(item.getAttribute("time"));
             h.put(itemID, time);
         }
         return h;
